// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> should render a disabled RadioField 1`] = `
<div>
  <label
    class="_label_e6rgs_141 _isDisabled_e6rgs_151 label"
    for="japanese"
  >
    <input
      class="input"
      disabled=""
      id="japanese"
      type="radio"
    />
    sushis and sashimis
  </label>
</div>
`;

exports[`<RadioButton /> should render an enabled Radio field 1`] = `
<div>
  <label
    class="_label_e6rgs_141 label"
    for="japanese"
  >
    <input
      class="input"
      id="japanese"
      type="radio"
    />
    sushis and sashimis
  </label>
</div>
`;

exports[`<RadioButton /> should render captions under radio button 1`] = `
<div>
  <label
    class="_label_e6rgs_141 label"
    for="japanese"
  >
    <input
      class="input"
      id="japanese"
      type="radio"
    />
    sushis and sashimis
  </label>
  <div
    class="caption caption"
  >
    delicious
  </div>
</div>
`;
